# grpc-sandbox

./: .augmentignore  .bazelrc  .dockerignore  .gitignore  MODULE.bazel  Makefile  README.md  buf.gen.yaml  go.mod  go.sum  requirements.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup-workspace.sh  test-workspace.sh
.devcontainer/scripts/: post-create.sh  setup-workspace.sh  shared-utils.sh  test-workspace.sh
.devcontainer/scripts/tests/: test-build.sh  test-config.sh  test-docker.sh  test-ports.sh  test-resources.sh  test-tools.sh
.github/workflows/: test-devcontainer.yml
productinfo/client/: main.go
productinfo/go/server/: main.go
productinfo/python/client/: client.py
productinfo/python/server/: server.py
productinfo/server/: main.go  pi_server.go
proto/: product_info.proto
proto/hello_service/: product_info.proto
proto/order/: order_management.proto
proto/product/: product_info.proto
proto/user/: user_service.proto
src/c++/product/server/: BUILD  build.sh  main.cpp  product_info_server.cpp  product_info_server.h  run.sh
src/go/product/client/: main.go
src/go/product/server/: main.go  server.go
src/python/product/: BUILD  client.py  server.py
